upgrade actors default versions based on breaking changes (#8492)